--- a/templates/dash.html
+++ b/templates/dash.html
@@ -99,7 +99,7 @@
                                     csv-header="headerH"
                                     ng-csv="download(firebaseH, headerH)"
                                      class="btn btn-block btn-primary" field-separator="," decimal-separator=".">
-                                Load Health Center Data
+                                Download Health Center Data
                             </button>
                         </div>
 
@@ -110,7 +110,7 @@
                             <button ng-disabled="!schoolLoaded"
                                     csv-header="headerS"
                                     ng-csv="download(firebaseS, headerS)" class="btn btn-block btn-primary" field-separator="," decimal-separator=".">
-                                Load School Data
+                                Download School Data
                             </button>
                         </div>
                     </div>
